namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-historical-prisoner-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-historical-prisoner-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "HMPPS Historical prisoner Application - HPA"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-historical-prisoner-ui.git,https://github.com/ministryofjustice/hmpps-historical-prisoner-api.git"
    cloud-platform.justice.gov.uk/slack-alert-channel: "syscon-alerts-non-prod"
    cloud-platform.justice.gov.uk/slack-channel: "syscon_team"
    cloud-platform.justice.gov.uk/team-name: "syscon-devs"
    cloud-platform.justice.gov.uk/service-area: "Platform and Reporting"
