namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-historical-prisoner-dev/99-redirect_old_url_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/custom-http-errors: "418"
    nginx.ingress.kubernetes.io/rewrite-target: https://historical-prisoner-dev.prison.service.justice.gov.uk/$1
    external-dns.alpha.kubernetes.io/set-identifier: hmpps-hpa-redirect-old-url-dev-hmpps-historical-prisoner-dev-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
  labels:
    app: hmpps-historical-prisoner-dev
  name: hmpps-hpa-redirect-old-url-dev
  namespace: hmpps-historical-prisoner-dev
spec:
  ingressClassName: default
  rules:
  - host: hpa-dev.prison.service.justice.gov.uk
    http:
      paths:
      - backend:
          service:
            name: hmpps-historical-prisoner-dev
            port: 
              name: http
        path: /(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - hpa-dev.prison.service.justice.gov.uk
    secretName: hmpps-hpa-cert
